Blender Internal material node 'mapping' not showing results of animation #47424

Closed
opened 2016-02-15 21:16:00 +01:00 by Christian Krupa · 6 comments

{F282932}System Information
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
version 2.76b

Worked: (optional)

Short description of error
When animating the parameters of a mapping node in the blender internal material nodes, the results of the keyframes are not shown or rendered. When adjusting these values by mouse action or by changing them, it does.

Exact steps for others to reproduce the error
For the example I've attached, I added a material node system, added a cloud texture, geometry input and a mapping node. I animated the z-axis rotation and added a cycles modifier to extend it. I have reproduced this result after working on a project file where I was trying initially to animate the x-location parameter so I can report that this also does not show results.

Based on a (as simple as possible) attached .blend file with minimum amount of steps

{[F282932](https://archive.blender.org/developer/F282932/BI_Nodes_Mapping_animation_BUG.blend)}**System Information** Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) version 2.76b Worked: (optional) **Short description of error** When animating the parameters of a mapping node in the blender internal material nodes, the results of the keyframes are not shown or rendered. When adjusting these values by mouse action or by changing them, it does. **Exact steps for others to reproduce the error** For the example I've attached, I added a material node system, added a cloud texture, geometry input and a mapping node. I animated the z-axis rotation and added a cycles modifier to extend it. I have reproduced this result after working on a project file where I was trying initially to animate the x-location parameter so I can report that this also does not show results. Based on a (as simple as possible) attached .blend file with minimum amount of steps

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @krupa-2

Added subscriber: @krupa-2

Added subscriber: @mont29

Added subscriber: @mont29

Can confirm this, changing animated value by hand in mapping node updates render result, but frame change changes nothing…

Can confirm this, changing animated value by hand in mapping node updates render result, but frame change changes nothing…

This issue was referenced by bff15770a9

This issue was referenced by bff15770a962ae931c1e891ed76fd195ce5b2994

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47424
No description provided.